# turtle_nav

./: common_prop.xacro  ros2_control.xacro  sensors.xacro  sensors_gazebo.xacro  turtle_base.xacro  turtle_base_gazebo.xacro  turtle_nav.urdf.xacro
my_robot_navigation/: package.xml  setup.py
my_robot_navigation/config/: explore.yaml  nav2_params.yaml
my_robot_navigation/launch/: explore.launch.py  nav2_bringup.py
myrobot_bringup/: CMakeLists.txt  package.xml
myrobot_bringup/config/: my_controllers.yaml  ros_gz_bridge.yaml
myrobot_bringup/launch/: myrobot_gazebo.launch.py  myrobot_gazebo.launch.xml
myrobot_bringup/rviz/: myrobot.rviz
myrobot_bringup/worlds/: testworld.world  turtle_train_world.sdf  turtle_train_world.sdf.config  turtle_train_world.world  turtle_train_world.world.bak
picture/turtle_nav/: my_map_save.pgm
